# example-rust-php-ext

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  stubs.php  teste.php
.cargo/: config.toml
src/: lib.rs
